<resources>
    <string name="app_name"> getFit </string>
    <string name="input_time"> WORKOUT TIME </string>
    <string name="button_label"> Enter </string>
    <string name="timer_label">How much time do you have?</string>
    <string name="time_unit">MINUTES</string>
    <string name="muscle_qustion">What muscles do you want to work?</string>
    <string name="button_function">Next</string>
    <string name="muscle_part1">Abs</string>
    <string name="muscle_part2">Quads</string>
    <string name="muscle_part3">Glutes</string>
    <string name="muscle_part4">Triceps</string>
    <string name="muscle_part5">Biceps</string>
    <string name="muscle_part6">Back</string>
    <string name="muscle_part7">Chest</string>
    <string name="muscle_selection">muscles</string>
    <string name="button_go">GENERATE WORKOUT</string>
    <string name="generatingpage">generatingpic</string>
    <string name="list_view">YOUR WORKOUT TOTAL TIME:</string>
    <string name="startworkout">START NOW!</string>
    <string name="regenerate_workout">REGENERATE</string>
    <string name="text_timeremaining">TIME REMAINING</string>
    <string name="text_name">ExerciseName</string>
    <string name="timer_button">PAUSE</string>
    <string name="timer_reset">RESET</string>
    <string name="finish_line">WORKOUT COMPLETE! NICE</string>
    <string name="button_EXIT">TREAT YOURSELF</string>
    <string name="button_goAgain">GO AGAIN?</string>
    <string name="button_complete">COMPLETE</string>

</resources>
