<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/getfit"
    tools:context=".SetTime">


    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="133dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/bevan"
        android:gravity="center"
        android:text="@string/timer_label"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="27sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="54dp" />

    <EditText
        android:id="@+id/editTime"
        style="@android:style/Widget.DeviceDefault.Light.EditText"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="258dp"
        android:ems="10"
        android:fontFamily="@font/bevan"
        android:hint="@string/button_label"
        android:inputType="time"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/background_dark"
        tools:backgroundTint="@android:color/background_light" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="121dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@+id/editText"
        android:fontFamily="@font/bevan"
        android:text="@string/time_unit"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_move"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp"
        android:fontFamily="@font/bevan"
        android:text="@string/button_function"
        android:textSize="18sp" />

</RelativeLayout>